# parking-project

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: USER_GUIDE.md  apis.md  ddd-bounded-contexts.md  ddd-domain-models.md  ddd-ubiquitous-language.md  design-justification.md  microservices-architecture.md  microservices-diagram.mmd  redesign-notes.md  smell-inventory.md  smell-mypy.txt  smell-ruff.txt
docs/uml/: class-diagram.mmd  original_class.mmd  original_sequence_leave.mmd  original_sequence_park.mmd  redesign-class.mmd  redesign-sequence-park.mmd  redesign-slot-state.mmd  sequence-park.mmd  slot-state.mmd
src/: ElectricVehicle.py  ParkingManager.py  Vehicle.py  cli.py  parking_service.py  slot.py  vehicle_factory.py
tests/: conftest.py  test_behavior_baseline.py  test_ev_finders.py  test_lookup_by_reg.py  test_parking_service.py  test_parking_service_roundtrip.py  test_persistence.py  test_service_negative_paths.py  test_service_uses_factory.py  test_slot_id_normalization.py  test_slot_state.py  test_smoke.py  test_vehicle_factory.py
