[project]
name = "parking-lot-manager"
version = "0.0.1"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E","F","I","UP","B","SIM"]
ignore = ["E501"]  # we'll handle long lines later
exclude = ["docs/"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = false
no_implicit_optional = true
strict_optional = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
