[project]
name = "parking-lot-manager"
version = "0.0.1"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"
# keep non-lint things here (e.g., formatting later)

[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM"]
ignore = ["E501"]           # we’ll deal with long lines later
exclude = ["docs/"]         # paths Ruff should skip

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = false
no_implicit_optional = true
strict_optional = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
