[project]
name = "parking-lot-manager"
version = "0.0.1"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM","PL"]  # include pylint ruleset ("PL") for basics
ignore = ["E501"]                           # we'll handle long lines later

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true  # TEMP: until we add stubs or package these modules
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
